--- a/screen.css
+++ b/screen.css
@@ -1,5 +1,11 @@
 /* Add screen styles below */
 
 body {
-    background: #aaa;
+    background: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+    width: 100%;
+
 }
